# NeckApp

./: .gitignore  .gitmodules  .ignore  README.md  appstore.png.import  default_bus_layout.tres  export_presets.cfg  icon.svg.import  neck.gdextension  project.godot  white.png.import
Autoload/: GlobalSettings.gd  GlobalVars.gd  Utils.gd
CppExtension/ChordDetector/: CMakeLists.txt  README.md
CppExtension/ChordDetector/src/: Chromagram.h
CppExtension/ChordDetector/tests/: test.cpp
CppExtension/source/: .clang-format  CMakeLists.txt
CppExtension/source/include/: Chord.hpp  Neck.hpp  example.h  tests.h
CppExtension/source/src/: Chord.cpp  ChordInfo.cpp  Neck.cpp  example.cpp  register_types.cpp
GDExtension/: .clang-format  .clang-tidy  CMakeLists.txt
GDExtension/ChordDetector/: CMakeLists.txt
GDExtension/Information/: Chords.drawio  CppExtension.drawio  ExerciseLoop.drawio  chords_data.md
GDExtension/source/include/: Chord.hpp  ChordInfo.hpp  Neck.hpp  example.h  register_types.h
GDExtension/source/src/: Chord.cpp  ChordInfo.cpp  Neck.cpp  example.cpp  register_types.cpp
GodotProject/: HELP.TXT  Instruction.txt  default_bus_layout.tres  export_presets.cfg  icon.svg.import  neck.gdextension  project.godot
GodotProject/Autoload/: GlobalSettings.gd  GlobalVars.gd  Utils.gd
GodotProject/Resources/Interfaces/: AudioAnalyzeInterface.gd  FSInterface.gd
GodotProject/Resources/UIElements/ChordView/: ChordView.gd
GodotProject/Resources/UIElements/ComplexityLevel/: ComplexityLevel.gd  ComplexityLevel.tscn
GodotProject/Resources/UIElements/CountDown/: CountDown.gd
GodotProject/Resources/UIElements/SideBar/: SideBar.gd  SideBar.tscn
GodotProject/Resources/UIElements/ValuesLabel/: ValuesLabel.gd
GodotProject/Scenes/MainMenu/: AudioGraphicLayer.gd  MainMenu.tscn  Root.gd  Workspace.gd
GodotProject/Scenes/SettingsWindow/: SettingsWindow.tscn  Workspace.gd
Resources/Interfaces/: AudioAnalyzeInterface.gd  AudioAnalyzeInterface.tscn  FSInterface.gd
Resources/NeckGenerator/: Generator.gd
Resources/Themes/: GeneralTheme.tres
Resources/UIElements/ChordView/: ChordView.gd  ChordView.tscn
Resources/UIElements/ComplexityLevel/: ComplexityLevel.gd  ComplexityLevel.tscn
Resources/UIElements/CountDown/: CountDown.gd  CountDown.tscn
Resources/UIElements/SideBar/: SideBar.gd
Resources/UIElements/ValuesLabel/: ValuesLabel.gd  ValuesLabel.tscn
Scenes/MainMenu/: AudioGraphicLayer.gd  MainMenu.tscn  Root.gd  Workspace.gd
Scenes/SettingsWindow/: SettingsWindow.tscn  Workspace.gd
